# Scout

./: .gitignore  Cargo.toml  dev
app/: Cargo.toml
app/src/: app.rs  main.rs  plugins.rs  preferences.rs  shared.rs
app/src/plugin/: mod.rs  plugin_bindings.rs  plugin_parser.rs
app/src/result/: mod.rs
app/src/style/: .build.css  __gtk.css  _app.sass  _preferences.sass
app/src/window/: about.rs  app.rs  mod.rs  prefs.rs  style.rs  window.rs
app/src/window/prefs_page/: appearance.rs  behavior.rs  developer.rs  mod.rs  plugins.rs
app/style/: _app.sass  _color.sass  main.sass
core/: Cargo.toml  build.rs
core/src/: lib.rs  plugin.rs  searchresult.rs  shared.rs
plugin/program/: Cargo.toml
plugin/program/src/: lib.rs
plugins/application/: Cargo.toml
plugins/application/src/: applicationresult.rs  lib.rs  result.rs
plugins/application/style/: .build.css  main.sass
plugins/directory/: Cargo.toml
plugins/directory/src/: lib.rs  result.rs
plugins/directory/style/: .build.css  _color.sass
plugins/starter/: Cargo.toml
plugins/starter/src/: lib.rs  result.rs
plugins/starter/style/: .build.css
plugins/websearch/: Cargo.toml
plugins/websearch/src/: lib.rs  result.rs
plugins/websearch/style/: main.sass
src/: fileinfo.rs  main.rs  preferences.rs  shared.rs
src/result/: program.rs
src/style/: .build.css  __gtk.css  _app.sass  _def.sass  _preferences.sass  _program.sass  main.sass  style.css  style.sass
src/window/: about.rs  app.rs  mod.rs  prefs.rs  style.css  style.rs
src/window/prefs_page/: appearance.rs  general.rs  mod.rs
