[package]
edition = "2018"
name = "explorer"
version = "0.0.1"
description = "Explorer"
authors = [ "Auri <me@auri.xyz>" ]

[dependencies]
open = "1"
dirs = "3.0"
gdk = "0.13.2"
chrono = "0.4"
glib = "0.10.3"
pango = "0.9.1"
colorsys = "0.6.3"
mime_guess = "2.0"

[dependencies.gtk]
version = "0.9.0"
features = [ "v3_24" ]

[dependencies.gio]
version = ""
features = [ "v2_44" ]
