[package]
edition = "2018"
name = "scout"
version = "0.0.1"
description = "Scout"
authors = [ "Auri <me@auri.xyz>" ]

[dependencies]
open = "1"
dirs = "3.0"
gdk = "0.13.2"
chrono = "0.4"
glib = "0.10.3"
pango = "0.9.1"
whoami = "1.1.2"
colorsys = "0.6.3"
mime_guess = "2.0"
cairo-rs = "0.9.1"
gdk-pixbuf = "0.9.0"
shell-words = "1.0.0"
convert_case = "0.4.0"
freedesktop_entry_parser = "1.1.1"

hjson = { package = "serde-hjson", version = "0.9.1" }

[dependencies.gtk]
version = "0.9.0"
features = [ "v3_24" ]

[dependencies.gio]
version = ""
features = [ "v2_44" ]
