[package]
edition = "2018"
name = "scout"
version = "0.0.1"
description = "Scout"
authors = [ "Auri <me@auri.xyz>" ]

[dependencies]
colorsys = "0.6.3"
convert_case = "0.4.0"

whoami = "1.1.2"
shell-words = "1.0.0"

serde_json = "1.0.64"
serde = { version = "1.0", features = [ "derive" ] }

mime_guess = "2.0"
freedesktop_entry_parser = "1.1.1"

gdk = "0.13.2"
glib = "0.10.3"
pango = "0.9.1"
cairo-rs = "0.9.1"
gdk-pixbuf = "0.9.0"
gio = { version = "0.9.1", features = [ "v2_44" ] }
gtk = { version = "0.9.0", features = [ "v3_24" ] }
