[package]
edition = "2018"
version = "0.0.1"
name = "scout_plugin_directory"
authors = [ "Auri <me@auri.xyz>" ]

[lib]
crate-type = [ "cdylib" ]

[dependencies]
core = { package = "scout-core", path = "../../core" }

convert_case = "0.4.0"

dirs = "3.0.2"
itertools = "0.10.0"
shell-words = "1.0.0"

pango = "0.9.1"
gdk-pixbuf = "0.9.0"
gtk = { version = "0.9.0", features = [ "v3_24" ] }
opener = "0.4.1"
mime_guess = "2.0.3"
gio = "0.9.1"
